--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <footer>
       Coded by Adrianna Bell
       <span>
-        <a href="#" target="_blank">Open-Sourced on Github</a>
+        <a
+          href="https://github.com/thecodedcosmos/amazing-world-clock"
+          target="_blank"
+        >
+          Open-Sourced on Github
+        </a>
       </span>
     </footer>
     <script src="js/index.js"></script>
