added container in body plus select option

--- a/index.html
+++ b/index.html
@@ -8,20 +8,28 @@
     <title>World Clock - Adrianna Bell</title>
   </head>
   <body>
-    <h1>
-      World Clock
-    </h1>
-    <footer>
-      Coded by Adrianna Bell
-      <span>
-        <a
-          href="https://github.com/thecodedcosmos/amazing-world-clock"
-          target="_blank"
-        >
-          Open-Sourced on Github
-        </a>
-      </span>
-    </footer>
+    <div class="container">
+      <h1>
+        World Clock
+      </h1>
+      <select>
+        <option value="">Select City...</option>
+        <option value="">Atlanta</option>
+        <option value="">Chicago</option>
+        <option value="">Philadelphia</option>
+      </select>
+      <footer>
+        Coded by Adrianna Bell
+        <span>
+          <a
+            href="https://github.com/thecodedcosmos/amazing-world-clock"
+            target="_blank"
+          >
+            Open-Sourced on Github
+          </a>
+        </span>
+      </footer>
+    </div>
     <script src="js/index.js"></script>
   </body>
 </html>
