Added Cities to HTML

--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
         <option value="">Chicago</option>
         <option value="">Philadelphia</option>
       </select>
+
+        <div class="city">
+          <h2>New York City 🇺🇸 </h2>
+          <div class="date">September 28, 2023</div>
+          <div class="time">2:06:00 AM</div>
+        </div>
+        <div class="city">
+          <h2>Lagos 🇺🇳 </h2>
+          <div class="date">September 28, 2023</div>
+          <div class="time">2:06:00 AM</div>
+        </div>
       <footer>
         Coded by Adrianna Bell
         <span>
@@ -28,8 +39,8 @@
             Open-Sourced on Github
           </a>
         </span>
+        </div>
       </footer>
-    </div>
     <script src="js/index.js"></script>
   </body>
 </html>
