--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="time">2:06:00 AM</div>
         </div>
         <div class="city">
-          <h2>Lagos 🇺🇳 </h2>
+          <h2>Lagos 🇳🇬 </h2>
           <div class="date">September 28, 2023</div>
           <div class="time">2:06:00 AM</div>
         </div>
