--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link href='https://fonts.googleapis.com/css?family=Shrikhand' rel='stylesheet'>
     <title>World Clock - Adrianna Bell</title>
   </head>
   <body>
@@ -31,15 +32,9 @@
         </div>
       <footer>
         Coded by Adrianna Bell
-        <span>
-          <a
-            href="https://github.com/thecodedcosmos/amazing-world-clock"
-            target="_blank"
-          >
-            Open-Sourced on Github
-          </a>
-        </span>
-        </div>
+      <a href="https://github.com/thecodedcosmos/amazing-world-clock"
+            target="_blank">
+            Open-Sourced on Github </a>
       </footer>
     <script src="js/index.js"></script>
   </body>
