--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <h2>Lagos 🇳🇬 </h2>
           <div class="date">September 28, 2023</div>
           <div class="time">2:06:00 AM</div>
+          </div>
         </div>
       <footer>
         Coded by Adrianna Bell
