--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <link href='https://fonts.googleapis.com/css?family=Shrikhand' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet'>
+
     <title>World Clock - Adrianna Bell</title>
   </head>
   <body>
@@ -21,16 +23,20 @@
       </select>
 
         <div class="city">
+        <div>
           <h2>New York City 🇺🇸 </h2>
           <div class="date">September 28, 2023</div>
-          <div class="time">2:06:00 AM</div>
-        </div>
-        <div class="city">
-          <h2>Lagos 🇳🇬 </h2>
+           </div>
+          <div class="time">2:06:00 <small>AM</small> </div>
+            </div>
+            <div class="city">
+        <div>
+          <h2>Rabat 🇲🇦 </h2>
           <div class="date">September 28, 2023</div>
-          <div class="time">2:06:00 AM</div>
-          </div>
-        </div>
+           </div>
+          <div class="time">2:06:00 <small>AM</small> </div>
+            </div>
+             </div>
       <footer>
         Coded by Adrianna Bell
       <a href="https://github.com/thecodedcosmos/amazing-world-clock"
