Updated HTML and CSS to display current date and time of cities.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js" integrity="sha512-ae875b70oSplY0gKnsUZyoB0F2ywdOn3pSKP5dBV6ZdBmtr5D54VYKXbMamjnGNA1IpvyF6v0tHuQUZv6rtiAw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link href='https://fonts.googleapis.com/css?family=Shrikhand' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet'>
-
     <title>World Clock - Adrianna Bell</title>
   </head>
   <body>
     <div class="container">
       <h1>
-        World Clock
+        World Clock🌍
       </h1>
       <select>
         <option value="">Select City...</option>
@@ -22,19 +23,19 @@
         <option value="">Philadelphia</option>
       </select>
 
-        <div class="city">
+        <div class="city" id="new-york-city">
         <div>
           <h2>New York City 🇺🇸 </h2>
-          <div class="date">September 28, 2023</div>
+          <div class="date"></div>
            </div>
-          <div class="time">2:06:00 <small>AM</small> </div>
+          <div class="time"><small>AM</small> </div>
             </div>
-            <div class="city">
+            <div class="city" id="rabat">
         <div>
           <h2>Rabat 🇲🇦 </h2>
-          <div class="date">September 28, 2023</div>
+          <div class="date"></div>
            </div>
-          <div class="time">2:06:00 <small>AM</small> </div>
+          <div class="time"><small>AM</small> </div>
             </div>
              </div>
       <footer>
