Added a current location select to html and automated it through JS.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       
       <select id="city">
         <option value="">Select City...</option>
-        <option value="Africa/Lagos🇳🇬">Nigeria</option>
-        <option value="America/Jamaica🇯🇲">Jamaica</option>
-        <option value="America/Seoul🇰🇷">South Korea</option>
+        <option value="current">Current Location</option>
+        <option value="Africa/Lagos">Nigeria</option>
+        <option value="America/Jamaica">Jamaica</option>
+        <option value="America/Seoul">South Korea</option>
       </select>
 
       <div id="cities">
